--- a/Presence/example.css
+++ b/Presence/example.css
@@ -67,25 +67,7 @@ em {
   color: black;
 }
 
-/* Drawing */
-
-#colorholder {
-  width: 480px;
-  height: 30px;
-  border: 2px solid #424547;
-  margin-top: 5px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#drawing-canvas {
-  border: 3px solid #999
-}
-
-.colorbox {
-  width: 22px;
-  height: 22px;
-  margin: 1px;
-  display: inline-block;
-  border: 3px solid black;
+/* Presence */
+#presenceDiv {
+  text-align: center;
 }
