--- a/Tetris/example.css
+++ b/Tetris/example.css
@@ -1,3 +1,4 @@
+
 #clear {
   float:center;
   -webkit-border-radius: 5px;
@@ -67,25 +68,25 @@ em {
   color: black;
 }
 
-/* Drawing */
+/* Tetris */
 
-#colorholder {
-  width: 480px;
-  height: 30px;
-  border: 2px solid #424547;
-  margin-top: 5px;
-  margin-left: auto;
-  margin-right: auto;
+.tetris-body {
+    width: 600px;
 }
 
-#drawing-canvas {
-  border: 3px solid #999
-}
-
-.colorbox {
-  width: 22px;
-  height: 22px;
-  margin: 1px;
+#canvas0, #canvas1 {
   display: inline-block;
-  border: 3px solid black;
+  border: 4px solid #424547;
+}
+
+#restartButton {
+    margin-top: 5px;
+}
+
+#gameInProgress {
+  font-size: 14px;
+}
+
+.hide {
+  display: none;
 }
